# shuttle-template-axum

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
src/lib/: error.rs  errors.rs  lib.rs  service.rs  startup.rs  telemetry.rs
src/lib/routes/: health.rs  mod.rs  openapi.rs
