[package]
name = "shuttle-template-axum-server"
version = "0.7.0"
edition = "2021"
description = "A template for an Axum web server, hosted on Shuttle"
readme = "README.md"
repository = "ttps://github.com/sentinel1909/shuttle-template-axum.git"
license = "MIT"
publish = false

[[bin]]
name = "shuttle-template-axum-server"
path = "src/bin/main.rs"

[lib]
name = "shuttle_template_axum_lib"
path = "src/lib/lib.rs"

[dependencies]
axum = "0.8.1"
axum-extra = "0.10.0"
axum-macros = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features = false  }
thiserror = "2.0.9"
tokio = { version = "1.42", features = [ "net" ] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = [ "cors", "fs", "normalize-path", "request-id", "trace", "util" ] }
tracing = { version = "0.1.41", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
utoipa = "5.3.0"
uuid = { version = "1.11.0", features = [ "v4" ] }

